--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "bulk-file-upload",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "worker":"node src/worker/fileProcessor.mjs"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.713.0",
