--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "worker":"node src/worker/fileProcessor.mjs"
+    "worker": "node src/worker/fileProcessor.mjs"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.713.0",
     "@aws-sdk/s3-request-presigner": "^3.713.0",
     "ioredis": "^5.4.1",
     "mime-types": "^2.1.35",
+    "mongodb": "^6.12.0",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
