--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.713.0",
     "@aws-sdk/s3-request-presigner": "^3.713.0",
+    "csv-parse": "^5.6.0",
+    "dotenv": "^16.4.7",
     "ioredis": "^5.4.1",
     "mime-types": "^2.1.35",
     "mongodb": "^6.12.0",
@@ -20,7 +22,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redis": "^4.7.0",
-    "rsmq": "^0.12.4"
+    "rsmq": "^0.12.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "postcss": "^8",
