--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "redis": "^4.7.0",
     "rsmq": "^0.12.4",
     "xlsx": "^0.18.5"
